<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:orientation="vertical"
    android:background="#6FFFFAD3"
    android:id="@+id/act_add_task">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Task"
        android:textSize="30dp"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edt_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Select due date:"
            android:focusable="false"
            android:padding="15dp"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/edt_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Task name:"
            android:padding="15dp"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/edt_task_desc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:background="@drawable/edit_text_background"
            android:hint="Description"
            android:padding="15dp"
            android:layout_margin="20dp"/>

        <EditText
            android:id="@+id/edt_task_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Set Reminder"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp">
        <Button
            android:id="@+id/btn_task_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginRight="30dp"/>
        <Button
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Task"/>
    </LinearLayout>

</LinearLayout>