<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:orientation="vertical"
    android:id="@+id/act_create_account"
    android:background="#6FFFFAD3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Create your account"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_new_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Enter your name"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_new_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Enter your email"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Create"
        android:onClick="CreateUser"/>

</LinearLayout>