<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:orientation="vertical"
    android:background="#6FFFFAD3"
    android:id="@+id/act_view_completed">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Completed Task"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Due Date"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_view_completeTaskduedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Select due date:"
            android:focusable="false"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:inputType="none"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subject"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_view_completeTaskname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Task name:"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:inputType="none"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_view_completeTaskdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Description"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:inputType="none"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Reminder"/>
        <EditText
            android:id="@+id/edt_view_completeTaskReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Reminder"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:focusable="false"/>
    </LinearLayout>
        <Button
            android:id="@+id/btn_view_completeTask_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_restore_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="Restore"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="deleteTask" />

</LinearLayout>