<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/act_main"
    android:background="#6FFFFAD3">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/EntryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entries"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TaskTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tasks"/>

    </com.google.android.material.tabs.TabLayout>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TabLayout"/>


</LinearLayout>